[package]
name = "sabikani"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.34", features = ["derive"] }
reqwest = { version = "0.12.15", features = ["json"] }
tokio = { version = "1.44.1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
colored = "3.0.0"
terminal_size = "0.4.2"
anyhow = "1.0.97"
